# universal-design-methods

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  SKILL.md  USAGE.md  decision-framework.md  execution-templates.md  methods-communication.md  methods-evaluative.md  methods-exploration.md  methods-generative.md  methods-synthesis.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
examples/: 01_method_recommend.py  01_method_recommendation.py  02_journey_map.py  02_usability_test.py  03_ecosystem_pipeline.py  03_interview_guide.py  README.md
references/: 08-ecosystem-collaboration.md  09-cross-skill-collaboration.md  README.md  decision-framework.md  execution-templates.md  methods-communication.md  methods-evaluative.md  methods-exploration.md  methods-generative.md  methods-synthesis.md
skills/universal-design-methods/: SKILL.md
udm/: __init__.py  config.py  interview.py  observation.py  recommender.py  report.py  research_plan.py  survey.py  synthesis.py  templates.py  usability.py  utils.py
udm/tests/: test_all.py
