[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udm"
version = "2.3.15"
description = "Universal Design Methods toolkit — 100 design research methods with intelligent recommendations and Python execution (通用设计方法执行工具包 — 100种设计研究方法的知识查询、方法推荐与执行支持)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "AliDujie"}]
keywords = ["ux-research", "design-methods", "usability-testing", "user-interviews", "openclaw-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

[project.urls]
Homepage = "https://github.com/AliDujie/universal-design-methods"
Repository = "https://github.com/AliDujie/universal-design-methods"
Issues = "https://github.com/AliDujie/universal-design-methods/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["udm*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
